[metadata]
name = opkit
summary = operation and maintenance tools
author = Mry
author_email = Mry@devlop.org

[options]
python_requires = >=3.6.0
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    click~=8.1.7
    scapy~=2.5.0
    psutil~=5.9.6
    tabulate~=0.9.0
    prettytable~=3.9.0
    setuptools~=69.0.3

[files]
packages = opkit

[options.entry_points]
console_scripts =
    opkitctl = opkit.cmd.opkit:opkit
